- Fix W3C validation errors, alignment of items and language

--- a/main.css
+++ b/main.css
@@ -56,6 +56,11 @@ td {
     line-height: 1.3;
 }
 
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 table caption {
     margin: 10px 0;
     font-weight: bold;
